    considered valid without looking up a CRL.  The new option
    --enable-issuer-based-crl-check can be used to revert to the
    former behaviour.

  * gpgsm: Support rsaPSS signature verification.  [#4538]

  * gpgsm: Unless CRL checking is disabled lookup a missing issuer
    certificate using the certificate's authorityInfoAccess.  [#4898]

  * gpgsm: Fix possible NULL-deref in messages of --gen-key.  [#4895]

  * scd: Support the CardOS 5 based D-Trust Card 3.1.

  * dirmngr: Allow http URLs with "LOOKUP --url".

  * wkd: Take name of sendmail from configure.  Fixes an OpenBSD
    specific bug.  [#4886]

  Release-info: https://dev.gnupg.org/T4897
  See-also: gnupg-announce/2020q2/00044?.html


Noteworthy changes in version 2.2.20 (2020-03-20)
-------------------------------------------------

  * Protect the error counter against overflow to guarantee that the
    tools can't be tricked into returning success after an error.

  * gpg: Make really sure that --verify-files always returns an error.

  * gpg: Fix key listing --with-secret if a pattern is given.  [#4061]

  * gpg: Fix detection of certain keys used as default-key.  [#4810]

  * gpg: Fix default-key selection when a card is available.  [#4850]

  * gpg: Fix key expiration and key usage for keys created with a
    creation date of zero.  [4670]

  * gpgsm: Fix import of some CR,LF terminated certificates.  [#4847]

  * gpg: New options --include-key-block and --auto-key-import to
    allow encrypted replies after an initial signed message.  [#4856]

  * gpg: Allow the use of a fingerprint with --trusted-key. [#4855]

  * gpg: New property "fpr" for use by --export-filter.

  * scdaemon: Disable the pinpad if a KDF DO is used.  [#4832]

  * dirmngr: Improve finding OCSP certificates.  [#4536]

  * Avoid build problems with LTO or gcc-10. [#4831]

  Release-info: https://dev.gnupg.org/T4860
  See-also: gnupg-announce/2020q1/000444.html


Noteworthy changes in version 2.2.19 (2019-12-07)